welcome.lessons.welcome.variables.Variables.scala.error
Variables:2: error: not found: value nbpas
nbpas=0
^Variables:3: error: not found: value dejafait
dejafait =0
^Variables:6: error: not found: value nbpas
	nbpas = nbpas+1;
        ^Variables:8: error: not found: value prendsBiscuit
prendsBiscuit()
^Variables:9: error: not found: value nbpas
while (nbpas != dejafait){
       ^Variables:11: error: not found: value dejafait
	dejafait = dejafait+1;
        ^