welcome.lessons.welcome.variables.Variables.scala.code
nbpas=0
dejafait =0
while (!estSurBiscuit()){
	avance()
	nbpas = nbpas+1;
}
prendsBiscuit()
while (nbpas != dejafait){
	recule()
	dejafait = dejafait+1;
}
